Removed z-index bug
Removed the z-index trait in the 'Bottom Left Design' svg

--- a/homepage.css
+++ b/homepage.css
@@ -60,7 +60,6 @@ nav ul li a{
 	position: absolute;
 	left: 0%;
 	bottom: 0%;
-	z-index: +1;
 }
 
 .button{
